# computergraphics-projects

./: 3Dpyramidproj.sln  3Dpyramidproj.vcxproj  3Dpyramidproj.vcxproj.filters  CMakeLists.txt  main.cpp
3Dpyramidproj - Copy/x64/Debug/: 3Dpyramidproj.exe.recipe
3Dpyramidproj - Copy/x64/Debug/3Dpyramidproj.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog
3Dpyramidproj/x64/Debug/: 3Dpyramidproj.ilk  vc143.idb
3Dpyramidproj/x64/Debug/3Dpyramidproj.tlog/: 3Dpyramidproj.lastbuildstate  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
libraries - Copy/include/glad/: glad.h
motionproj/: motionproj.sln  motionproj.vcxproj  test.cpp  test.h
motionproj/animatedpyramid/: NoOOP.h  animatedanimated.cpp  animatedpyramid.sln  animatedpyramid.vcxproj  main.cpp
motionproj/animatedpyramid/animatedpyramid/Debug/: animatedpyramid.exe.recipe  animatedpyramid.ilk  vc143.idb
motionproj/motionproj/Debug/: motionproj.exe.recipe  motionproj.ilk  vc143.idb
motionproj/motionproj/Debug/motionproj.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
openglpro/: glad.c  main.cpp  openglpro.sln  openglpro.vcxproj
openglpro/libraries/lib/: glfw3.lib
pyramid creation/: pyramid creation.sln  pyramid creation.vcxproj  pyramid creation.vcxproj.filters
pyramid creation/pyramid creation/Debug/: pyramid creation.exe.recipe  pyramid creation.ilk  vc143.idb
pyramid(3)/: pyramid(3).sln  pyramid(3).vcxproj  pyramid(3).vcxproj.filters  rotatexpulsate.cpp
pyramid(3)/pyramid(3)/Debug/: pyramid(3).exe.recipe  pyramid(3).ilk  vc143.idb
(+39 files in other folders)
